tests/ui/coherence/coherence-fundamental-trait-objects.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-fundamental-trait-objects.rs:12:1
   |
LL | impl Misc for dyn Fundamental<Local> {}
   | ^^^^^^^^^^^^^^----------------------
   |               |
   |               `dyn Fundamental<Local>` is not defined in the current crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0117`.
